# substrate

./: .gitlab-ci.yml  .travis.yml  Cargo.toml  Makefile  README.adoc  build.rs  test2
core/cli/src/: lib.rs  params.rs
core/client/src/: backend.rs  blockchain.rs  call_executor.rs  client.rs  error.rs  genesis.rs  in_mem.rs  lib.rs  runtime_api.rs
core/executor/src/: heap.rs  lib.rs  wasm_executor.rs
core/finality-grandpa/src/: lib.rs  tests.rs
core/network/src/: chain.rs
core/primitives/src/: hasher.rs
core/service/src/: components.rs  config.rs
core/sr-api-macros/tests/: decl_and_impl.rs
core/sr-io/: without_std.rs
core/sr-std/: without_std.rs
core/state-machine/src/: lib.rs
core/test-runtime/src/: lib.rs
demo/consensus/src/: lib.rs
examples/deploy-smart-contract-adder/: Cargo.toml  README.md  just_for_demo.patch
examples/deploy-smart-contract-adder/src/: main.rs
node/runtime/src/: lib.rs
srml/examples/deploy-smart-contract-adder/: Cargo.toml  README.md
srml/scored-pool/src/: lib.rs
srml/template-module/: Cargo.toml
srml/template-module/src/: lib.rs
substrate/bft/src/: lib.rs
substrate/client/: Cargo.toml
substrate/client/src/: client.rs  genesis.rs  in_mem.rs  lib.rs
substrate/extrinsic-pool/src/: pool.rs
substrate/network/src/: blocks.rs  chain.rs  import_queue.rs  message.rs  on_demand.rs  protocol.rs  service.rs  sync.rs
substrate/service/src/: chain_ops.rs
substrate/telemetry/src/: lib.rs
substrate/test-client/src/: block_builder_ext.rs  client_ext.rs
substrate/test-runtime/src/: lib.rs  system.rs
(+20 files in other folders)
